<resources>
    <string name="app_name">EPRA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_set_interval">Set the interval between sounds</string>
    <string-array name="pref_set_interval_list_titles">
        <item>0.5s</item>
        <item>1s</item>
        <item>1.5s</item>
    </string-array>
    <string-array name="pref_set_interval_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_set_period_titles">
        <item>15m</item>
        <item>1h</item>
        <item>3h</item>
    </string-array>
    <string-array name="pref_set_period_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="devices">Devices</string>
    <string name="burglary_management">Burglary Management</string>
    <string name="settings">Settings</string>
    <string name="epra">EPRA</string>
    <string name="epra_description">Entry Prevention Alarm System</string>


    <!--Strings related to preferences-->
    <string name="list_interval_title">Set interval between sounds</string>
    <string name="seek_sound_title">Set Sound Intensity</string>
    <string name="switch_ring_title">Ring alarm for a limited period</string>
    <string name="list_period_title">Set alarm ring period</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password must contain between 8 and 20 characters</string>
    <string name="error_unregistered_email">Unregistered email</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Required field</string>
    <string name="permission_email">"Address email autocomplete requires permission to access contacts."</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="noAccountYet">No account yet? Register here.</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_nr">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenter_password">Confirm password</string>
    <string name="alreadyMember">Have an account? Login here.</string>
    <string name="error_nonmatching_password">Passwords do not match</string>
    <string name="signup_failed">Failed to register account.</string>
    <string name="error_invalid_mobile">Invalid phone number.</string>
    <string name="action_sign_up_short">Register</string>
    <string name="login_timeout">Unable to connect to authentication server.</string>
    <string name="login_failed">Login failed.</string>
    <string name="permission_internet">Login requires permission to access internet.</string>
    <string name="register_account">Register account</string>
    <string name="register">Register</string>
    <string name="show_history">Show History</string>
    <string name="signup_success">User register successfully!</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="current_room">Current Room:</string>
    <string name="entry_point">Entry Point:</string>
    <string name="users_notified">Users Notified:</string>
    <string name="notify_cops">Notify Police</string>
    <string name="turn_off_alarm">Turn Off Alarm</string>
    <string name="ignore">Ignore</string>
    <string name="simulate">Simulate</string>
    <string name="authentication_title">Authentication</string>
    <string name="authentication_description">Place your finger on the scanner to proceed</string>
    <string name="authentication_divider">Or</string>
    <string name="auth_pin">Write your password below</string>
    <string name="auth_alert">Wrong pin!</string>
    <string name="users">Users</string>
    <string name="no_users">No users&#8230;</string>
    <string name="menu_refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="no_permissions">No permissions</string>
    <string name="permissions_saved">Permissions saved</string>
    <string name="permissions_not_saved">Failed to save permissions</string>
    <string name="get_users_failed">Failed to get data about users</string>
    <string name="delete_user_confirmation_title">Delete user account</string>
    <string name="delete_user_confirmation">Do you really want to delete %1$s\'s account?</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_delete_failed">Failed to delete account</string>
    <string name="devices_fragment_title">Devices</string>
    <string name="burglary_management_fragment_title">Burglary Management</string>
    <string name="pin">Pin</string>
    <string name="Logout">Logout</string>
    <string name="edit_permission_failed">Failed to save edited permissions</string>
    <string name="edit_permission_saved">Permissions saved</string>
    <string name="devices_name">Device\'s name</string>
    <string name="new_device_added">New device added successfully</string>
    <string name="new_device_add_failed">Failed to add new device</string>
    <string name="menu_edit">Edit device</string>
    <string name="menu_delete">Remove device</string>
    <string name="delete_device_confirmation_title">Delete device</string>
    <string name="delete_device_confirmation">Do you really want to delete %1$s\?</string>
    <string name="device_updated">Device updated successfully!</string>
    <string name="failed_to_update_device">Failed to update device</string>
    <string name="device_deleted">Device deleted successfully!</string>
    <string name="failed_to_delete_device">Failed to delete device</string>
    <string name="menu_edit_user">Edit permissions</string>
    <string name="menu_delete_user">Remove account</string>
    <string name="no_devices">No devices&#8230;</string>
    <string name="delete_area_confirmation_title">Delete area</string>
    <string name="delete_area_confirmation">Do you really want to delete %1$s\?</string>
    <string name="area_deleted">Area and all the associated devices were deleted</string>
    <string name="failed_to_delete_area">Failed to delete area</string>
    <string name="menu_edit_area">Edit area</string>
    <string name="menu_delete_area">Delete area</string>
    <string name="areas_name">Area\'s name</string>
    <string name="new_area">New area added successfully</string>
    <string name="failed_to_add_new_area">Failed to add new area</string>
    <string name="devices_updated">Area\'s devices updated</string>
    <string name="failed_to_update_devices">Failed to update area\'s devices</string>
    <plurals
        name="burglary_management_time">
        <item quantity="zero">%d minutes</item>
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

</resources>

