<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_menu_devices"
            android:title="@string/devices" />

        <!--<item
            android:id="@+id/nav_burglaryManag"
            android:icon="@drawable/ic_menu_alarm"
            android:title="@string/burglary_management" />-->
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/users"/>

    </group>


        <group
            android:id="@+id/idrequiredforseparationline">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/Logout" />

        </group>


</menu>
