<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="500dp">

    <ImageView
        android:id="@+id/fingerprintImage"
        android:layout_width="175dp"
        android:layout_height="125dp"
        android:layout_marginTop="36dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_fingerprint"
        android:contentDescription="@string/authentication_description"/>

    <TextView
        android:id="@+id/paragraphLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:text="@string/authentication_description"
        android:textAlignment="center" />


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:background="@color/gray_very_light" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/authentication_divider" />

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:background="@color/gray_very_light" />

    </RelativeLayout>


    <TextView
        android:id="@+id/paragraphLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/auth_pin"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/pin1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center" />


</LinearLayout>
