<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/baseOfBM"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_weight="1.2"
                android:paddingTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_target"
                        android:paddingRight="8dp"
                        android:tint="@color/gray"/>

                    <TextView
                        android:id="@+id/current_room_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_room"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="asoua sp jks"
                        android:id="@+id/current_room_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_entry_arrow"
                        android:paddingRight="8dp"
                        android:tint="@color/gray"/>

                    <TextView
                        android:id="@+id/entry_point_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entry_point"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="asdiasnjoadsdfs"
                        android:id="@+id/entry_point_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_notifications_black_24dp"
                        android:paddingRight="8dp"
                        android:tint="@color/gray"/>

                    <TextView
                        android:id="@+id/users_notified_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/users_notified"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="asadn"
                        android:id="@+id/users_notified_text"
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

                </LinearLayout>

            </LinearLayout>








            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="0.8">

                <View
                    android:id="@+id/second_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_very_light" />


                <LinearLayout
                    android:id="@+id/first_two_buttons"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp">


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/notify_police_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/notify_cops"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/simulate_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/simulate"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/last_two_buttons"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/turn_off_alarm_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/turn_off_alarm"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/ignore_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/ignore"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_anchor="@id/bottom_sheet"
        android:background="@drawable/shadow"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        app:behavior_hideable="false"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/burglary_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.android.scmu_epra.BottomSheetListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>



    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>